<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_main_constraint_layout_padding_8dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/enter_any_text_to_save"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_margin_4dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/divider_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin_4dp"
        android:text="@string/read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider_vertical"
        app:layout_constraintTop_toBottomOf="@+id/edittext_input" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_loaded_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_horizontal" />

    <View
        android:id="@+id/divider_horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height_1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton_save" />

    <View
        android:id="@+id/divider_vertical"
        android:layout_width="0.1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textview_loaded_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_input" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height_1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edittext_input"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittext_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittext_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_input_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:hint="@string/id"
        android:id="@+id/edittext_input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_input_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_save_using_sharedpreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_using_sharedpreference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_input_id" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_load_from_sharedpreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_from_sharedpreference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton_save_using_sharedpreference" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_delete_from_sharedpreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_from_sharedpreference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton_load_from_sharedpreference" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textview_loaded_data_from_sharedpreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton_delete_from_sharedpreference" />

</androidx.constraintlayout.widget.ConstraintLayout>